graphql-parser/tests/snapshots/test__parse_schema__enums.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Enum(
                    EnumType {
                        position: Pos(1:1),
                        description: None,
                        name: "Site",
                        directives: [],
                        values: [
                            EnumValue {
                                position: Pos(2:3),
                                description: None,
                                name: "DESKTOP",
                                directives: [],
                            },
                            EnumValue {
                                position: Pos(3:3),
                                description: None,
                                name: "MOBILE",
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
