graphql-parser/tests/snapshots/test__parse_schema__extend_enum.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            TypeExtension(
                Enum(
                    EnumTypeExtension {
                        position: Pos(1:8),
                        name: "Site",
                        directives: [],
                        values: [
                            EnumValue {
                                position: Pos(2:3),
                                description: None,
                                name: "VR",
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
