graphql-parser/tests/snapshots/test__parse_schema__extend_input.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            TypeExtension(
                InputObject(
                    InputObjectTypeExtension {
                        position: Pos(1:8),
                        name: "InputType",
                        directives: [],
                        fields: [
                            InputValue {
                                position: Pos(2:3),
                                description: None,
                                name: "other",
                                value_type: NamedType(
                                    "Float",
                                ),
                                default_value: Some(
                                    Float(
                                        12300.0,
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
