graphql-parser/tests/snapshots/test__parse_schema__extend_object.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            TypeExtension(
                Object(
                    ObjectTypeExtension {
                        position: Pos(1:8),
                        name: "Foo",
                        implements_interfaces: [],
                        directives: [],
                        fields: [
                            Field {
                                position: Pos(2:3),
                                description: None,
                                name: "seven",
                                arguments: [
                                    InputValue {
                                        position: Pos(2:9),
                                        description: None,
                                        name: "argument",
                                        value_type: ListType(
                                            NamedType(
                                                "String",
                                            ),
                                        ),
                                        default_value: None,
                                        directives: [],
                                    },
                                ],
                                field_type: NamedType(
                                    "Type",
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
