graphql-parser/tests/snapshots/test__parse_schema__extend_scalar.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Ok(
    Document {
        definitions: [
            TypeExtension(
                Scalar(
                    ScalarTypeExtension {
                        position: Pos(1:8),
                        name: "CustomScalar",
                        directives: [
                            Directive {
                                position: Pos(1:28),
                                name: "onScalar",
                                arguments: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
