graphql-parser/tests/snapshots/test__parse_schema__fragment.snap
---
source: graphql-parser/tests/test.rs
expression: result_unix
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `fragment[Name]`\nExpected `schema`, `extend`, `scalar`, `type`, `interface`, `union`, `enum`, `input` or `directive`\n",
    ),
)
